@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-03T16:21:39Z",
-  "count_outdated" : 427,
-  "uniques_outdated" : 246,
-  "count" : 461,
-  "uniques" : 263,
+  "timestamp" : "2022-08-04T01:35:31Z",
+  "count_outdated" : 430,
+  "uniques_outdated" : 248,
+  "count" : 463,
+  "uniques" : 264,
   "clones" : [
-    {
-      "timestamp": "2022-07-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-07-21T00:00:00Z",
       "count": 1,
