@@ -1,12 +1,7 @@
 {
-  "count": 34,
+  "count": 33,
   "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2022-07-20T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-21T00:00:00Z",
       "count": 1,
